# edit-game

./: .envrc.dist  .gitignore  LICENSE  Makefile  README.md  manage.py  pyproject.toml
api/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
edit_game/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.ts
frontend/src/app/core/: api-directory.ts  api-gateway.ts  api-tokens.token.spec.ts  api-tokens.token.ts  hateoas.model.spec.ts  hateoas.model.ts  hateoas.service.ts
frontend/src/app/features/cuts/: cut.model.ts  cut.ts
frontend/src/app/features/games/: game.model.ts  game.ts
frontend/src/app/features/team-logos/: team-logo.model.ts  team-logo.ts
frontend/src/app/features/teams/: team.model.ts  team.ts
frontend/src/app/features/tmp-images/: tmp-image.model.ts  tmp-image.ts
frontend/src/app/features/tournaments/: tournament.model.ts  tournament.ts
frontend/src/app/features/video-metadatas/: video-metadata.model.ts  video-metadata.ts
frontend/src/app/features/videos/: yt-video.model.ts  yt-video.ts
frontend/src/app/game-view/: game-view.css  game-view.html  game-view.spec.ts  game-view.ts
frontend/src/app/game-view/meta-fields-components/: meta-fields-components.css  meta-fields-components.html  meta-fields-components.spec.ts  meta-fields-components.ts
frontend/src/app/game-view/miniature-builder/: miniature-builder.css  miniature-builder.html  miniature-builder.spec.ts  miniature-builder.ts
frontend/src/app/game-view/miniature-builder/image-preview/: image-preview.css  image-preview.html  image-preview.ts
frontend/src/app/game-view/team-select/: team-select.css  team-select.html  team-select.spec.ts  team-select.ts
frontend/src/app/tournament-games-view/: tournament-games-view.css  tournament-games-view.html  tournament-games-view.ts
frontend/src/app/tournaments-view/: tournament-view.component.css  tournament-view.component.html  tournament-view.component.spec.ts  tournament-view.component.ts
game_edit/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
game_edit/migrations/: 0001_initial.py  0002_initial.py
game_edit/utils/: dataset_utils.py
jugger_video_manipulation/: __init__.py  build_miniature.py  utils.py
miniatures/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
miniatures/management/: __init__.py
miniatures/management/commands/: __init__.py  remove_tmp.py
miniatures/migrations/: 0001_initial.py  0002_rename_linkedvideo_ytvideo_linked_video_and_more.py
miniatures/youtube_interaction/: __init__.py  yt_interaction.py  yt_video_types.py
